# magni-cspr

./: .gitignore  AGENTS.md  README.md  SCENARIO.md  SUBMISSION.md  TICKETS.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
casper/: .env.example  CONTRACTS.md  DEPLOY.md  PROJECT.md  README.md  TICKETS.md
casper/RESEARCH/: delegation-from-contract.md  v2-vault-spec.md  vault-staking-architecture.md
casper/frontend/: .env.example  index.html  package.json  pnpm-lock.yaml  vercel.json  vite.config.ts
casper/frontend/api/: rpc.js
casper/frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
casper/frontend/src/components/: Dashboard.tsx  DemoBanner.tsx  EmptyState.tsx  ErrorBoundary.tsx  HowItWorks.tsx  Landing.tsx  OnboardingStepper.tsx  Skeleton.tsx  ThemeToggle.tsx  Toast.tsx  TxModal.tsx
casper/frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  index.ts
casper/frontend/src/config/: contracts.generated.ts
casper/frontend/src/hooks/: useDemo.ts
casper/frontend/src/utils/: amounts.test.ts  amounts.ts
casper/magni_casper/: .gitignore  Cargo.toml  Odra.toml  build.rs  rust-toolchain.toml
casper/magni_casper/src/: lib.rs  magni.rs  staking_poc.rs  styks_external.rs  tokens.rs
casper/magni_casper/tests/: magni_staking_flow_test.rs
casper/scripts/: build.sh  livenet_deploy_and_demo.sh  setup.sh  test.sh  testnet_deploy_and_wire_frontend.sh
