[package]
name = "magni_casper"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "magni_livenet"
path = "src/bin/magni_livenet.rs"
required-features = ["livenet"]

[[bin]]
name = "staking_poc_livenet"
path = "src/bin/staking_poc_livenet.rs"
required-features = ["livenet"]

[[bin]]
name = "magni_casper_build_contract"
path = "src/bin/magni_casper_build_contract.rs"
test = false
doctest = false
bench = false

[dependencies]
odra = "2.4"
odra-modules = "2.4"
chrono = { version = "0.4", optional = true }

[dev-dependencies]
odra-test = "2.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
odra-casper-wasm-env = { version = "2.4" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-casper-livenet-env = { version = "2.4", optional = true }

[features]
default = []
livenet = ["dep:odra-casper-livenet-env", "dep:chrono"]
